--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,21 @@ server.context-path=/jblog
 
 init-password = init1234
 
+
+# 前缀prefix
+spring.thymeleaf.prefix=classpath:templates/
+# 后缀suffix
+spring.thymeleaf.suffix=.html
+# 类型mode
+spring.thymeleaf.mode=HTML5
+# charset=<encoding> is added
+spring.thymeleaf.encoding=UTF-8
+#content-type
+spring.thymeleaf.content-type=text/html
+# set to false for hot refresh
+spring.thymeleaf.cache=false
+
+
 #DataSource
 #连接地址
 spring.datasource.url=jdbc:mysql://localhost:3306/blog_test?characterEncoding=utf-8
